[tool.poetry]
name = "circuits-lab"
version = "0.1.0"
description = ""
authors = ["Michael Murithi <mykemitrichev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyqt6 = "^6.8.1"
pyqtgraph = "^0.13.7"
numpy = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
